--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* style.css */
-
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
@@ -8,11 +6,11 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #1a1a1a; /* темний фон */
+    background-color: #1a1a1a; 
 }
 
 .container {
-    background-color: #333; /* темний контейнер */
+    background-color: #333;
     padding: 40px;
     border-radius: 10px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
@@ -46,7 +44,7 @@ input[type="password"] {
     padding: 12px;
     border: none;
     border-radius: 5px;
-    background-color: #444; /* темне поле введення */
+    background-color: #444; 
     color: #fff;
     font-size: 16px;
     transition: background-color 0.3s ease;
@@ -55,7 +53,7 @@ input[type="password"] {
 input[type="text"]:focus,
 input[type="password"]:focus {
     outline: none;
-    background-color: #555; /* зміна кольору при фокусі */
+    background-color: #555; 
 }
 
 input[type="checkbox"] {
